# kdm5

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake
cmake/modules/: FindQ5ImageBlitz.cmake  UnixAuth.cmake
doc/kdm/: CMakeLists.txt  index.docbook
kdm/: CMakeLists.txt  ConfigureChecks.cmake  config-kdm.h.cmake  config.def  confproc.pl
kdm/backend/: CMakeLists.txt  client.c  dm.c  greet.h  process.c  resource.c  server.c  session.c  util.c
kdm/kcm/: CMakeLists.txt  background.cpp  helper.cpp  kbackedcombobox.cpp  kbackedcombobox.h  kcmkdm5_actions.actions  kdm-conv.cpp  kdm-dlg.cpp  kdm-gen.cpp  kdm-gen.h  kdm-shut.cpp  kdm-theme.cpp  kdm-users.cpp  kdm5.desktop  main.cpp  main.h  positioner.cpp  positioner.h  screenpreviewwidget.cpp  screenpreviewwidget.h
kdm/kcm/background/: CMakeLists.txt  bgadvanced.cpp  bgadvanced.h  bgdialog.cpp  bgdialog.h  bgmonitor.cpp  bgrender.cpp  bgrender.h  bgsettings.cpp  bgwallpaper.cpp  bgwallpaper.h
kdm/kcm/kwidgetsaddons/: kdialog.cpp  kdialog.h  kdialog_p.h  kfontrequester.h
kdm/kfrontend/: CMakeLists.txt  genkdmconf.c  kchooser.cpp  kconsole.cpp  kconsole.h  kdm_config.c  kdm_greet.c  kdm_greet.h  kdmclock.cpp  kdmconfig.cpp  kdmctl.c  kdmshutdown.cpp  kdmshutdown.h  kfdialog.cpp  kgapp.cpp  kgapp.h  kgdialog.cpp  kgreeter.cpp  kgreeter.h  kgverify.cpp  kgverify.h  krootimage.cpp  krootimage.h
kubuntu-patches/: 01_kdm_does_not_wreak_havoc.diff  02_kdmrc_defaults_kubuntu.diff  03-NOT-APPLIED_genkdmconf+nocustom.diff  04_kdm_X_path.diff  05_kdm_xreset_hook_framework.diff  06_kdm_vt_switching_on_kfreebsd.diff
libs/kdm/: CMakeLists.txt  kgreet_classic.cpp  kgreet_generic.cpp  kgreet_winbind.cpp
